<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridView3</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_second">Display</string>
    <string name="title_activity_welcome">Welcome</string>
	<string name="text_welcome">WELCOME TO FLASH CARDS</string>
	<string name="text_add_yourself">Please Add Yourself to the Grid</string>
	<string name="edit_name">Name</string>
	<string name="edit_email">E-mail</string>
	<string name="edit_Url">URL</string>
	<string name="edit_skills">Skills</string>
	<string name="photo">Photo</string>
	<string name="save_all">Save All</string>
	<string name="settings">Settings</string>
</resources>